--- a/tienda53/src/main/webapp/style.css
+++ b/tienda53/src/main/webapp/style.css
@@ -110,3 +110,88 @@ border-bottom-left-radius: 5px;
   width: 100%;
   bottom: 0;
 }
+.form-login-index {
+  width: 370px;
+  height: 200px;
+  background: #212F3D;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #006666;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;
+}
+.container{
+  background-color: #006666;
+  color: #ffffff;
+  transition: 0,5s all;
+  -webkit-box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  font-size: 17px;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.container:hover{
+  transition: 0,5s all;
+   background-color: #3f3e3e;
+}
+.bg-primary {
+    background-color: #212529!important;
+    font-size: 16px;}
+    
+.btn-success {
+    color: #fff;
+    background-color: #006666;
+    border-color: #198754;}
+.container2{
+  color: #ffffff;
+  transition: 0,5s all;
+  -webkit-box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  font-size: 17px;
+  background-attachment: fixed;
+  background-size: cover;}
+ .Eliminar{
+    color: #fff;
+    background-color: #990000;
+    border-color: #198754;
+      width: 100%;
+  height: 40px;}
+  .Actualizar{
+    color: #fff;
+    background-color: #cc9900;
+    border-color: #198754;}
+    .Buscar{
+    color: #fff;
+    background-color: #000066;
+    border-color: #198754;}
+    
+  .containerInsertarUsuario{
+  width: 500px;
+  height: 400px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #006666;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+
+.titulomodulo{
+	color: #fff;
+	 margin: center;
+    background-color: #212529;
+	font-size: 25px;
+}
