--- a/tienda53/src/main/webapp/style.css
+++ b/tienda53/src/main/webapp/style.css
@@ -189,6 +189,23 @@ transition: 0,5s all;
 background-size: cover;
 background-attachment: fixed;}
 
+  .containerEliminarUsuario{
+  width: 500px;
+  height: 400px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #006666;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+  
 .titulomodulo{
 	color: #fff;
 	 margin: center;
