--- a/tienda53/src/main/webapp/style.css
+++ b/tienda53/src/main/webapp/style.css
@@ -143,7 +143,7 @@ background-attachment: fixed;
 }
 .bg-primary {
     background-color: #212529!important;
-    font-size: 16px;}
+    font-size: 21px;}
     
 .btn-success {
     color: #fff;
@@ -170,16 +170,16 @@ background-attachment: fixed;
     .Buscar{
     color: #fff;
     background-color: #000066;
-    border-color: #198754;}
+    border-color: rgb(255, 255, 255);}
     
   .containerInsertarUsuario{
   width: 500px;
-  height: 400px;
+  height: 450px;
   background: #000000;
   margin: center;
   box-shadow: 7px 13px 37px #000;
   padding: 20px 30px;
-  border-top: 15px solid #006666;
+  border-top: 15px solid #330066;
   color: white;
 border-top-left-radius: 20px;
 border-top-right-radius: 20px;
@@ -193,5 +193,160 @@ background-attachment: fixed;}
 	color: #fff;
 	 margin: center;
     background-color: #212529;
+	font-size: 25px;
+}
+
+  .containerEliminarUsuario{
+  width: 500px;
+  height: 250px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #990000;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+
+.alert-danger{
+	width: 500px;
+  	height: 70px;
+	color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+    margin: center;
+}
+
+.btn.btn-primary.active{
+	color: #fff;
+    border-color: #ffffff;
+}
+
+.titulomoduloEliminar{
+	color: #fff;
+	 margin: center;
+    background-color: #842029;
+	font-size: 25px;
+}
+.alert-success {
+	width: 500px;
+  	height: 70px;
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border-color: #badbcc;
+}
+.cajonbuscar{
+	    display: flex;
+    align-items: center;
+    padding: .375rem .75rem;
+    font-size: 5rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    white-space: nowrap;
+    background-color: #cccc99;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+}
+
+  .containerBuscarUsuario{
+  width: 500px;
+  height: 560px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #000066;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+
+.titulomoduloBuscar{
+	color: #fff;
+	 margin: center;
+    background-color: #000066;
+	font-size: 25px;
+}
+
+.titulomoduloActualizar{
+	color: #fff;
+	 margin: center;
+    background-color: #006600;
+	font-size: 25px;
+}
+
+  .containerActualizarUsuario{
+  width: 500px;
+  height: 460px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #006600;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+
+  .containerActualizarCliente{
+  width: 500px;
+  height: 460px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #006600;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+
+  .containerBuscarcliente{
+  width: 500px;
+  height: 500px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #000066;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
+
+.titulomoduloLista{
+	color: #fff;
+	 margin: center;
+    background-color: #006666;
+	font-size: 25px;
+}
+
+.titulomoduloinsertar{
+	color: #fff;
+	 margin: center;
+    background-color: #330066;
 	font-size: 25px;
 }
