--- a/tienda53/src/main/webapp/style.css
+++ b/tienda53/src/main/webapp/style.css
@@ -369,3 +369,19 @@ background-size: cover;
 background-attachment: fixed;}
 
 
+  .containerInsertarProducto{
+  width: 500px;
+  height: 250px;
+  background: #000000;
+  margin: center;
+  box-shadow: 7px 13px 37px #000;
+  padding: 20px 30px;
+  border-top: 15px solid #006600;
+  color: white;
+border-top-left-radius: 20px;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+border-bottom-left-radius: 20px;
+transition: 0,5s all;
+background-size: cover;
+background-attachment: fixed;}
