Front y back detalle clientes

--- a/tienda53/src/main/webapp/style.css
+++ b/tienda53/src/main/webapp/style.css
@@ -451,4 +451,19 @@ transition: 0,5s all;
 background-size: cover;
 background-attachment: fixed;
 }
+
+
+
+.containerdetalleventas{
+  width: 800px;
+  
+  background-color: #006666;
+  color: #ffffff;
+  transition: 0,5s all;
+  -webkit-box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  box-shadow: 10px 10px 14px 2px rgba(0,0,0,0.47);
+  font-size: 17px;
+  background-attachment: fixed;
+  background-size: cover;
+}
     
